deleting object fit cover causing bug on safari

--- a/asset/scss/sectionFive.scss
+++ b/asset/scss/sectionFive.scss
@@ -21,7 +21,6 @@
         height: 855px;
         width: 100%;
         border: 0;
-        object-fit: cover;
 
         @media screen and (max-width: 450px) {
           height: 227px;
